--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
-def despace(s):
+#include <stdio.h>
+#include <string.h>
+
+def despace(s);
 return
 
-def fix_data(value):
+def fix_data(value);
 
 return float(''.join(value.split()))
 
-def fix_data2(value):
+def fix_data2(value);
 try:
 return float(value)
-except ValueError:
+except ValueError;
 return float(''.join(value.split()))
 
 import string
 # initialize some global data
 table = string.maketrans("", "") # all 8 bit characters
 keep = "1234567890.-+"
-dontkeep = ''.join([c for c in table if c not in keep])
+dontkeep = ''.join([c for c in table if c not in keep]);
